# gopoolboy

./: .gitignore  README.md  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: admin.yaml  auth.yaml  cert-manager.yaml  crumbler.yaml  datadog.yaml  findr-updater.yaml  findr.yaml  frontend.yaml  homepage.yaml  ingress.yaml  orgamon.yaml  qapp.yaml  taginator.yaml  verticalpodautoscaler.yaml  zelda.yaml
applications/: blub
applications/admin/: package-lock.json  package.json
applications/crumbler/: package-lock.json  package.json
applications/findr/: README.md  docker-entrypoint.sh  package-lock.json  package.json
applications/findr-updater/: Dockerfile  docker-entrypoint.sh  package-lock.json  package.json
applications/frontend/: package-lock.json  package.json
applications/homepage/: package-lock.json  package.json
applications/orgamon/: README.md  package-lock.json  package.json
applications/taginator/: package-lock.json  package.json
applications/zelda/: knexfile.js  (+2 more)
ask/: models.py
backend/: Dockerfile  pyproject.toml
backend/ask/: schema.py  urls.py  views.py
backend/ask/migrations/: 0001_initial.py
backend/ask/templates/: rest_list.html
backend/ask/templates/ask/: index.html
backend/backend/: schema.py  settings.py  urls.py
frontend/: README.md  package-lock.json  package.json
infrastructure/: .gitignore
orgamon/: package-lock.json  package.json
poolboy/: asgi.py  settings.py  urls.py  wsgi.py
qapp/: index.js  knexclient.js  knexfile.js  orm.js  package-lock.json  package.json  schema.js  validate.js
(+318 files in other folders)
