[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["MrTrustworthy <tinywritingmakesmailhardtoread@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"
djangorestframework = "^3.11"
psycopg2 = "^2.8.5"
graphene-django = "^2.9.1"
django-cors-headers = "^3.2"
django-graphql-jwt = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
